@@ -767,6 +767,23 @@ argument_list|(
 operator|new
 name|OptionBuilder
 argument_list|(
+literal|"refresh"
+argument_list|)
+operator|.
+name|description
+argument_list|(
+literal|"refresh dynamic resolved revisions"
+argument_list|)
+operator|.
+name|create
+argument_list|()
+argument_list|)
+operator|.
+name|addOption
+argument_list|(
+operator|new
+name|OptionBuilder
+argument_list|(
 literal|"dependency"
 argument_list|)
 operator|.
@@ -1836,6 +1853,24 @@ argument_list|(
 name|validate
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|line
+operator|.
+name|hasOption
+argument_list|(
+literal|"refresh"
+argument_list|)
+condition|)
+block|{
+name|resolveOptions
+operator|.
+name|setRefresh
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 name|ResolveReport
 name|report
 init|=
